--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,5 @@
 # Skills
+- skills：SDL Trados，GitHub user，Hexo Blogger
 
 # Education
 - skill: Education
@@ -7,3 +8,4 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+   
